# chess-alpha-beta

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: build.yml
benches/: my_benchmark.rs
front/: .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front/src/: Game.ts  config.ts  index.ts  styles.css  vite-env.d.ts
src/: alpha_beta.rs  board_pretty_print.rs  board_value.rs  config.rs  game_modes.rs  game_settings.rs  lib.rs  main.rs  shuffled_move_list.rs
sudoers.d/: 10-github-runner-chess
systemd/: chess-alpha-beta.service
