[package]
name = "chess-alpha-beta"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.7.0"
anyhow = "1.0.86"
clap  = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
mime = "0.3.17"
pleco = "0.5.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
systemd-journal-logger = "2.1.1"
